sdk/tests/compile-fail/unnamed_fields.stderr
error: macro does not support unnamed variant fields
  --> $DIR/unnamed_fields.rs:13:13
   |
13 |     Transfer(u64),
   |             ^^^^^
